test/fail/2/Solution.java
public class Solution {

  public String main(String a, String b) {
    return a + b;
  }

}
